Fix post preview align

--- a/src/theme.scss
+++ b/src/theme.scss
@@ -155,6 +155,10 @@ body {
   line-height: 1.8em;
 }
 
+.max-lines p {
+  margin-bottom: 0;
+}
+
 .img-blog {
   height: 180px;
   width: 100%;
